--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
 
     <!--    Harmoniza Cromatica-->
     <color name="crom_primary">#0CE8C3</color>
-    <color name="crom_secondary">#0CF28B</color>
+    <color name="crom_secondary">#06B102</color>
     <color name="crom_tertiary">#0CF28B</color>
     <color name="crom_quaternary">#11F20C</color>
 
